test/classes/override/where-override.good
where-override.chpl:10: error: Child.g override keyword present but no superclass method matches signature to override
